fix: change to new heart icon and fix alignment

--- a/client/src/components/css/GameCard.css
+++ b/client/src/components/css/GameCard.css
@@ -46,13 +46,17 @@
     -webkit-backdrop-filter: blur(12px);
 }
 
-.redHeartIcon{
+.redHeartIcon {
     position: absolute;
-    bottom: 22.5%;
-    left: 5%;
-    filter: invert(47%) sepia(38%) saturate(803%) hue-rotate(314deg) brightness(91%) contrast(86%);
+    transform: translate(5px, -50px);
+    width: 43px;
     /* color: #ff3643; */
     /* border: black solid 1px;;
     outline: white solid 1px; */
     /* filter: drop-shadow(2px 2px 4px rgba(201, 21, 27, 0.5)); */
+    
+}
+
+.redHeartIconBox {
+    filter: drop-shadow(0px 0px 10px rgb(112, 10, 10));
 }
